dropshot/tests/fail/bad_endpoint8.stderr
error: endpoint handler functions must be async
  --> $DIR/bad_endpoint8.rs:20:1
   |
20 | fn bad_endpoint(
   | ^^
